syntax = "proto3";

package cline_core;

import "cline/common.proto";

option go_package = "github.com/cline/grpc-go/cline";
option java_multiple_files = true;
option java_package = "bot.cline_core.proto";

// SlashService provides methods for managing slash
service SlashService {
  // Sends button click message
  rpc reportBug(StringRequest) returns (Empty);
  rpc condense(StringRequest) returns (Empty);
}
